# yast-squid

./: .cvsignore  .gitignore  .rubocop.yml  .travis.yml  Dockerfile  MAINTAINER  README.md  RPMNAME  configure.in.in  yast2-squid.spec.in
.github/workflows/: ci.yml
agents/: Makefile  Makefile.am  Makefile.in  squid.scr
agents/config/: Makefile.am
agents/src/: Makefile.am  Y2CCSquidAgent.cc  debug.h  main.cpp  squid_agent.cpp  squid_agent.h  squid_file.cpp  squid_file.h  squid_parser.cpp  squid_parser.h
config/: Makefile.am  squid.desktop
doc/: Makefile.am
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-squid.changes  yast2-squid.spec
src/: .cvsignore  Makefile.am  Squid.ycp  Squid2.pm  SquidACL.ycp  SquidACL_local_functions.ycp  SquidErrorMessages.ycp  complex.ycp  dialogs.ycp  handlers.ycp  helper_functions.ycp  helps.ycp  inits.ycp  popup_dialogs.ycp  squid.desktop  squid.rnc  squid.ycp  squid_auto.ycp  squid_proposal.ycp  store_del.ycp  wizards.ycp
src/autoyast-rnc/: squid.rnc
src/clients/: squid.rb  squid.ycp  squid_auto.rb  squid_auto.ycp
src/desktop/: org.opensuse.yast.Squid.desktop  squid.desktop
src/include/squid/: SquidACL_local_functions.rb  SquidACL_local_functions.ycp  complex.rb  complex.ycp  dialogs.rb  handlers.rb  helper_functions.rb  helps.rb  helps.ycp  inits.rb  popup_dialogs.rb  popup_dialogs.ycp  store_del.rb  store_del.ycp  wizards.rb  wizards.ycp
src/modules/: Squid.rb  Squid.ycp  SquidACL.rb  SquidErrorMessages.rb  SquidErrorMessages.ycp
src/scrconf/: squid.scr
test/: complex_include_test.rb  squid_acl_test.rb  squid_error_messages_test.rb  squid_test.rb  test_helper.rb
testsuite/: Makefile
testsuite/tests/: Squid-Read.out  Squid-Read.rb  Squid-Read.ycp  Squid.out  Squid.rb  Squid.ycp  SquidACL.out  SquidACL.rb  SquidACL.ycp  SquidErrorMessages.out  SquidErrorMessages.rb  SquidErrorMessages.ycp  SquidRead.out  SquidRead.ycp  complex_include_test.rb  squid_test.rb  test_helper.rb
